--- a/CLUG/UnifiedGlossary.html
+++ b/CLUG/UnifiedGlossary.html
@@ -66,9 +66,9 @@ Key:<p>
 	<blockquote>
 	{<tt>DBNN</tt>: A loose outer garment, resembling a cloak, commonly made of camel's hair}
 	</blockquote>
-<b><a href="../CLUI/UnifiedIndex.html#Abá-Basír">'Abá-Basír</a></b><a name="'Abá-Basír"></a>
+<b><a href="../CLUI/UnifiedIndex.html#Abá-Basír">'Abá-Basír</a></b><a name="'Abá-Basír"></a> (Áqá Naqd-'Alí)
 	<blockquote>
-	{<tt>DBNN(index)</tt>: Áqá Naqd-'Alí, son of Haji Muhammad-Husayn, who repulsed the 'Iráqí regiment at Zanján}<p>
+	{<tt>DBNN(index)</tt>: son of Haji Muhammad-Husayn, who repulsed the 'Iráqí regiment at Zanján}<p>
 	{<tt>ESW</tt>: Son of a Zanján martyr and himself decapitated for his faith in that city}<p>
 	{<tt>CLUG</tt>: Son of a Zanján martyr, Haji Muhammad-Husayn, who repulsed the 'Iráqí regiment at Zanján, and himself decapitated for his faith in that city}<p>
 	</blockquote>
@@ -1388,6 +1388,7 @@ Key:<p>
 <b><a href="../CLUI/UnifiedIndex.html#Zion">Zion</a></b><a name="Zion"></a>
 	<blockquote>
 	{<tt>GL</tt>: A hill in Jerusalem, the site of the royal residence of David and his successors}
+	{<tt>KA</tt>: A hill in Jerusalem, the traditional site of the tomb of King David, and is symbolic of Jerusalem as a Holy City (<a href="../Baha'i/Baha/KA/p165-251Notes.html#note114">n114</a>)}
 	</blockquote>
 <b>Zíyárat</b><a name="Zíyárat"></a>
 	<blockquote>
