--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -41,7 +41,7 @@
 	 <tr>
 	 	 <td colspan=2><center><h3>IN THE NAME OF HIM WHO<br>IS THE SUPREME RULER<br>OVER ALL THAT HATH BEEN<br>AND ALL THAT IS TO BE</h3></center></td>
 		 <td><small>
-		 <i>The Revelation of Bahá'u'lláh</i>, vol. 3, chapters <a href="../../Others/ROB/V3/p275-307Ch13.html">13</a>, <a href="../../Others/ROB/V3/p308-321Ch14.html">14</a>, <a href="../../Others/ROB/V3/p322-342Ch15.html">15</a>, <a href="../../Others/ROB/V3/p343-370Ch16.html">16</a>, <a href="../../Others/ROB/V3/p371-399Ch17.html">17</a><p>
+		 <i>The Revelation of Bahá'u'lláh</i>, vol. 3, chapters <a href="../../Others/ROB/V3/p275-307Ch13.html">13</a>, <a href="../../Others/ROB/V3/p308-321Ch14.html">14</a>, <a href="../../Others/ROB/V3/p322-342Ch15.html">15</a>, <a href="../../Others/ROB/V3/p343-370Ch16.html">16</a>, <a href="../../Others/ROB/V3/p371-399Ch17.html">17</a>, <a href="../../Others/ROB/V3/Cover.html#cover5">prologue</a><p>
 		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-Aqdas"><i>The Kitáb-i-Aqdas</i></a>] 
 		 </small></td>
 		 <td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">19</DIV></center></small></td>
