--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -114,8 +114,7 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<td><a name="para6"/>
 	<center>
 	<h2>LONG OBLIGATORY PRAYER</h2><p>
-	<h3>TO BE RECITED ONCE IN<br>
-	TWENTY-FOUR HOURS</h3>
+	<h3>TO BE RECITED ONCE IN TWENTY-FOUR HOURS</h3>
 	</center>
 	</td>
 	<td VALIGN=top><small>
@@ -132,7 +131,10 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	</i></center>
 	O Thou Who art the Lord of all names and the Maker of the heavens!  I beseech Thee by them Who are the Daysprings of Thine invisible Essence, the Most Exalted, the All-Glorious, to make of my prayer a fire that will burn away the veils which have shut me out from Thy beauty, and a light that will lead me unto the ocean of Thy Presence.
 	</td>
-	<td></td>
+	<td VALIGN=top><small>
+   	<hr>
+	[CLUI:	<a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a>]
+	</small></td>
 	<td></td>
 </tr>
 <tr>
@@ -178,11 +180,13 @@ Page 99: "turning to any one" - anyone (no space) in PM
 <tr>
 	<td><a name="para12"/>
 	<center><i>
-	<blockquote>Let him then raise his hands, and repeat three times the Greatest Name.  Let him then bend down with hands resting on the knees before God--blessed and exalted be He--and say:</blockquote>
+	<blockquote>Let him then raise his hands, and repeat three times the Greatest Name. <sup>1</sup>  Let him then bend down with hands resting on the knees before God--blessed and exalted be He--and say:</blockquote>
 	</i></center>
 	Thou seest, O my God, how my spirit hath been stirred up within my limbs and members, in its longing to worship Thee, and in its yearning to remember Thee and extol Thee; how it testifieth to that whereunto the Tongue of Thy Commandment hath testified in the kingdom of Thine utterance and the heaven of Thy knowledge.  I love, in this state, O my Lord, to beg of Thee all that is with Thee, that I may demonstrate my poverty, and magnify Thy bounty and Thy riches, and may declare my powerlessness, and manifest Thy power and Thy might. 
 	</td>
-	<td></td>
+	<td VALIGN=top><small>
+	1. <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláh,GreatestName">Alláh-u-Abhá</a>
+	</small></td>
 	<td></td>
 </tr>
 <tr>
@@ -287,9 +291,7 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<td><a name="para22"/>
 	<center>
 	<h2>MEDIUM OBLIGATORY PRAYER</h2><p>
-	<h3>TO BE RECITED DAILY,<br>
-	IN THE MORNING, AT NOON,<br>
-	AND IN THE EVENING
+	<h3>TO BE RECITED DAILY, IN THE MORNING, AT NOON, AND IN THE EVENING
 	</h3>
 	</center>
 	</td>
@@ -298,8 +300,6 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	[CLUI: <br>
 	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatory">Obligatory Prayers</a>,<br>
 	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatorytimefor">Time for Prayers, definition</a>
-	]<p>
-	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
 	</small></td>
 	<td></td>
 </tr>
@@ -310,7 +310,10 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	</i></center>
 	Strengthen my hand, O my God, that it may take hold of Thy Book with such steadfastness that the hosts of the world shall have no power over it.  Guard it, then, from meddling with whatsoever doth not belong unto it.  Thou art, verily, the Almighty, the Most Powerful.
 	</td>
-	<td></td>
+	<td VALIGN=top><small>
+   	<hr>
+	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
+	</small></td>
 	<td></td>
 </tr>
 <tr>
@@ -330,7 +333,10 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	</i></center>
 	God testifieth that there is none other God but Him.  His are the kingdoms of Revelation and of creation.  He, in truth, hath manifested Him Who is the Dayspring of Revelation, Who conversed on Sinai, through Whom the Supreme Horizon hath been made to shine, and the Lote-Tree beyond which there is no passing hath spoken, and through Whom the call hath been proclaimed unto all who are in heaven and on earth:  "Lo, the All-Possessing is come.  Earth and heaven, glory and dominion are God's, the Lord of all men, and the Possessor of the Throne on high and of earth below!"
 	</td>
-	<td></td>
+	<td VALIGN=top><small>
+   	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a>]
+	</td>
 	<td></td>
 </tr>
 <tr>
@@ -379,14 +385,15 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<td><a name="para30"/>
 	<center>
 	<h2>SHORT  OBLIGATORY  PRAYER</h2><p>
-	<h3>TO BE RECITED ONCE IN TWENTY-FOUR<br>HOURS, AT NOON</h3>
+	<h3>TO BE RECITED ONCE IN TWENTY-FOUR HOURS, AT NOON</h3>
 	</center>
 	</td>
 	<td VALIGN=top><small>
    	<hr>
 	[CLUI: <br>
 	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatory">Obligatory Prayers</a>,<br>
-	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatorytimefor">Time for Prayers, definition</a>
+	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatorytimefor">Time for Prayers, definition</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a><br>
 	]<p>
 	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
 	</small></td>
@@ -420,36 +427,44 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	</td>
     <td VALIGN=top><small>
 	<hr>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#PrayerfortheDead">Prayer for the Dead</a>]
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#PrayerfortheDead">Prayer for the Dead</a>]<p>
+	<a href="../../Comp/BP/PrayerForTheDead.html">Expanded View</a>
 	</small>
 	</td>
 	<td></td>
 </tr>
 <tr>
-	<td><a name="para34"/>
-	O my God!  This is Thy servant and the son of Thy servant who hath believed in Thee and in Thy signs, and set his face towards Thee, wholly detached from all except Thee.  Thou art, verily, of those who show mercy the most merciful.
+	<td><a name="para66"></a>
+	O my God!  This is Thy servant and the son of Thy servant who hath believed in Thee and in Thy signs, and set his face towards Thee, wholly detached from all except Thee.  Thou art, verily, of those who show mercy the most merciful. 
 	</td>
-	<td></td>
-	<td></td>
+	<td VALIGN=top><small>
+	&nbsp;
+	</small></td>
+	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para35"/>
+	<td><a name="para67"></a>
 	Deal with him, O Thou Who forgivest the sins of men and concealest their faults, as beseemeth the heaven of Thy bounty and the ocean of Thy grace.  Grant him admission within the precincts of Thy transcendent mercy that was before the foundation of earth and heaven.  There is no God but Thee, the Ever-Forgiving, the Most Generous.
 	</td>
-	<td></td>
-	<td></td>
+	<td VALIGN=top><small>
+	&nbsp;
+	</small></td>
+	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">41</DIV></center><p></small></td>
 </tr>
 <tr>
-	<td><a name="para36"/>
+	<td><a name="para68"></a>
 	<center><i>
 	<blockquote>Let him, then, repeat six times the greeting</i> "Alláh-u-Abhá", <i>and then repeat nineteen times each of the following verses:</blockquote>
 	</i></center>
 	</td>
-	<td></td>
-	<td></td>
+	<td VALIGN=top rowspan="2"><small>
+	<hr>
+	["Alláh-u-Abhá" is said once; then the first of the six verses is recited nineteen times. Then "Alláh-u-Abhá" is said again, followed by the second verse, which is recited nineteen times, and so on. <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021]
+	</small></td>
+	<td VALIGN=top rowspan="2">&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para37"/>
+	<td><a name="para69"></a>
 	<blockquote><blockquote>
 	We all, verily, worship God.<br>
 	We all, verily, bow down before God.<br>
@@ -457,10 +472,8 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	We all, verily, give praise unto God.<br>
 	<a name="p102"></a>We all, verily, yield thanks unto God.<br>
 	We all, verily, are patient in God.
-	</blockquote></blockquote>	
+	</blockquote></blockquote>		
 	</td>
-	<td></td>
-	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">102</DIV></center></small></td>
 </tr>
 <tr>
 	<td><a name="para38"/>
@@ -472,7 +485,6 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	<td></td>
 	<td></td>
 </tr>
-
 </table>
 
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
