--- a/Baha'i/Baha/PM/p003-340.html
+++ b/Baha'i/Baha/PM/p003-340.html
@@ -7703,7 +7703,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#PrayerfortheDead">Prayer for the Dead</a>]
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#PrayerfortheDead">Prayer for the Dead</a>]<p>
+	<a href="../../Comp/BP/PrayerForTheDead.html">Expanded View</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">260</DIV></center><p></small></td>
 </tr>
@@ -7726,31 +7727,28 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para849"></a>
+	<td><a name="para68"></a>
 	<center><i>
 	<blockquote>Let him, then, repeat six times the greeting</i> "Alláh-u-Abhá", <i>and then repeat nineteen times each of the following verses:</blockquote>
 	</i></center>
 	</td>
-	<td VALIGN=top><small>
-	&nbsp;
+	<td VALIGN=top rowspan="2"><small>
+	<hr>
+	["Alláh-u-Abhá" is said once; then the first of the six verses is recited nineteen times. Then "Alláh-u-Abhá" is said again, followed by the second verse, which is recited nineteen times, and so on. <a href="https://www.bahai.org/library/authoritative-texts/prayers/bahai-prayers/bahai-prayers-full-diacritics.docx?f011de12">bahai.org</a> 2021]
 	</small></td>
-	<td VALIGN=top>&nbsp;</td>
+	<td VALIGN=top rowspan="2">&nbsp;</td>
 </tr>
 <tr>
-	<td><a name="para850"></a>
+	<td><a name="para69"></a>
 	<blockquote><blockquote>
 	We all, verily, worship God.<br>
 	We all, verily, bow down before God.<br>
 	We all, verily, are devoted unto God.<br>
 	We all, verily, give praise unto God.<br>
-	We all, verily, yield thanks unto God.<br>
+	<a name="p102"></a>We all, verily, yield thanks unto God.<br>
 	We all, verily, are patient in God.
-	</blockquote></blockquote>	
+	</blockquote></blockquote>		
 	</td>
-	<td VALIGN=top><small>
-	&nbsp;
-	</small></td>
-	<td VALIGN=top>&nbsp;</td>
 </tr>
 <tr>
 	<td><a name="para851"></a><a name="p261"/>
@@ -8883,7 +8881,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, ["One of his last contributions..."] vol 1, <a href="../../Others/ROB/V1/p198-209Ch11.html#p205">p. 205</a>; ["Nabíl, who was..."] vol. 4, <a href="../../Others/ROB/V4/p413-424Ch26.html#p419">p. 419</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#TabletofVisitationBahá'u'lláhBáb"><i>Tablet of Visitation</i></a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -8959,13 +8957,19 @@
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
+
+
+
 <tr>
 	<td><a name="para984"></a><a name="p314"/>    
 	<br><center><h2><a name="CLXXXI"/><span style="background-color: #ffffCC" TITLE="Section 181 - Index Entries: Daily obligatory prayers, Obligatory prayers, Prayers-daily obligatory">CLXXXI</span></h2></center>
 	</td>
 	<td VALIGN=top><small>
    	<hr>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#PrayersObligatory">Obligatory Prayers</a>]<p>
+	[CLUI:<br>
+	<a href="../../../CLUI/UnifiedIndex.html#PrayersObligatory">Obligatory Prayers</a>,<br>
+	<a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a><br>
+	]<p>
 	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">314</DIV></center><p></small></td>
@@ -8999,6 +9003,9 @@
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
+
+
+
 <tr>
 	<td><a name="para988"></a>
 	<br><center><h2><a name="CLXXXII"/><span style="background-color: #ffffCC" TITLE="Section 182 - Index Entries: Daily obligatory prayers, Obligatory prayers, Prayers-daily obligatory">CLXXXII</span></h2></center>
@@ -9006,8 +9013,6 @@
 	<td VALIGN=top><small>
 	<hr>
 	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#PrayersObligatory">Obligatory Prayers</a>]
-	<p>
-	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -9017,7 +9022,8 @@
 	Strengthen my hand, O my God, that it may take hold of Thy Book with such steadfastness that the hosts of the world shall have no power over it.  Guard it, then, from meddling with whatsoever doth not belong unto it.  Thou art, verily, the Almighty, the Most Powerful.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["Perform ye . . . ablutions for the Obligatory Prayer..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note34">Note 34</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -9037,8 +9043,9 @@
 	God testifieth that there is none other God but Him.  His are the kingdoms of Revelation and of creation. He, in truth, hath manifested Him Who is the Day-Spring of Revelation, Who conversed on Sinai, through Whom the Supreme Horizon hath been made to shine, and the Lote-Tree beyond which there is no passing hath spoken, and through Whom the call hath been proclaimed unto all who are in heaven and on earth:  "Lo, the All-Possessing is come.  Earth and heaven, glory and dominion are God's, the Lord of all men, and the Possessor of the Throne on high and of earth below!"
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
-	</small></td>
+   	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a>]
+	</td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">315</DIV></center><p></small></td>
 </tr>
 <tr>
@@ -9119,7 +9126,8 @@
 	O Thou Who art the Lord of all names and the Maker of the heavens!  I beseech Thee by them Who are the Day-Springs of Thine invisible Essence, the Most Exalted, the All-Glorious, to make of my prayer a fire that will burn away the veils which have shut me out from Thy beauty, and a light that will lead me unto the ocean of Thy Presence.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+   	<hr>
+	[CLUI:	<a href="../../../CLUI/UnifiedIndex.html#Qiblih ">Qiblih</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -9165,11 +9173,11 @@
 </tr>
 <tr>
 	<td><a name="para1014"></a><a name="para1015"></a>
-	<center><blockquote><i>Let him then raise his hands, and repeat three times the Greatest Name. Let him then bend down with hands resting on the knees before God-- blessed and exalted be He--and say:</i></blockquote></center>
+	<center><blockquote><i>Let him then raise his hands, and repeat three times the Greatest Name. <sup>1</sup> Let him then bend down with hands resting on the knees before God-- blessed and exalted be He--and say:</i></blockquote></center>
 	Thou seest, O my God, how my spirit hath been stirred up within my limbs and members, in its longing to worship Thee, and in its yearning to remember Thee and extol Thee; how it testifieth to that whereunto the Tongue of Thy Commandment hath testified in the kingdom of Thine utterance and the heaven of Thy knowledge.  I love, in this state, O my Lord, to beg of Thee all that is with Thee, that I may demonstrate my poverty, and magnify Thy bounty and Thy riches, and may declare my powerlessness, and manifest Thy power and Thy might.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	1. <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláh,GreatestName">Alláh-u-Abhá</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
