--- a/Baha'i/Others/ROB/V1/p053-070Ch05.html
+++ b/Baha'i/Others/ROB/V1/p053-070Ch05.html
@@ -229,7 +229,7 @@
        <td VALIGN=top><small><center><a name="p66">66</a></center><p>
 	   * Bahá'u'lláh.
    	   <hr>
-	   12. Bahá'u'lláh, 'Tablet of Ahmad', included in most Bahá'í Prayer Books.
+	   12. Bahá'u'lláh, <a href="../../../Comp/BP/p207-268Occasional.html#para17">'Tablet of Ahmad'</a>, included in most Bahá'í Prayer Books.
 	   </small></td>
 </tr>
 <tr>
