--- a/Baha'i/Others/ROB/V1/p228-245Ch14.html
+++ b/Baha'i/Others/ROB/V1/p228-245Ch14.html
@@ -45,8 +45,11 @@
 	   * An ancient festival when the Persians celebrate their New Year on the day of the vernal equinox, usually on the 21st March. The Bahá'í calendar also begins with Naw-Rúz which is one of the Bahá'í Holy Days. In 1863, Naw-Rúz was celebrated on the 22nd March as the vernal equinox took place after sunset on the 21st.
 	   <hr>
 	   <hr>
-	   [Tablet of the Holy Mariner] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para122">p. 147</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para125">p. 148</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para140">p. 157</a><p>
-	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
+	   <a href="../../../Comp/BP/p207-268Occasional.html#para73"><i>Tablet of the Holy Mariner</i></a><p>
+	   [CLUI:<br>
+	   <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Malláhu'l-Quds "><i>Lawh-i-Malláhu'l-Quds</i></a>]<br>
+	   <a href="../../../../CLUI/UnifiedIndex.html#Badí'CalendarNaw-Rúz">Naw-Rúz</a><br>
+	   ]
 	   </small></td>
 </tr>
 <tr>
@@ -85,7 +88,7 @@
 	   * Bahá'u'lláh.<p>
 	   † After each verse, except the last three, is the refrain: 'Glorified be my Lord, the All-Glorious!'<p>
 	   <hr>
-	   2. British <i>Bahá'í Prayers</i>. These words of 'Abdu'l-Bahá's are a preface to the Tablet.
+	   2. British <a href="../../../Comp/BP/p207-268Occasional.html#para74"><i>Bahá'í Prayers</i></a>. These words of 'Abdu'l-Bahá's are a preface to the Tablet.
 	   </small></td>
 </tr>
 <tr>
@@ -184,7 +187,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p235">235</a></center><p>
 	   <hr>
-	   3. British <i>Bahá'í Prayers</i>, pp. 51-7.
+	   3. British <a href="../../../Comp/BP/p207-268Occasional.html#para75"><i>Bahá'í Prayers</i></a>, pp. 51-7.
 	   </small></td>
 </tr>
 <tr>
