--- a/Baha'i/Others/ROB/V1/p294-314Ch18.html
+++ b/Baha'i/Others/ROB/V1/p294-314Ch18.html
@@ -42,7 +42,7 @@
        <td VALIGN=top><small><center><a name="p294">294</a></center><p>
 	   * The Báb, Whose name was Siyyid 'Alí-Muhammad, was born on the first day of Muharram 1235 A.H., and Bahá'u'lláh on the second day of the same month in 1233 A.H. These dates are in accordance with the lunar calendar used in the Islámic world. There is a tradition which attributes to Imám 'Alí, the successor of Muhammad, this saying: 'I am two years younger than my Lord'. (The comparable dates in the Christian calendar are, for the Báb, 20 October 1819, and for Bahá'u'lláh, 12 November 1817.)<p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para93">p. 57</a>, for the words quoted, except for the first title which comes from the 'Tablet of Ahmad'.
+	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para93">p. 57</a>, for the words quoted, except for the first title which comes from the <a href="../../../Comp/BP/p207-268Occasional.html#para8">'Tablet of Ahmad'</a>.
 	   <hr>
 	   [Festivals of the Twin Birthdays] "...will now be observed on the first and the second day following the occurrence of the eighth new moon after Naw-Rúz." <a href="../../../UHJ/Messages/10July2014TotheBahaisoftheWorld.xhtml">UHJ</a>
 	   </small></td>
