--- a/Baha'i/Others/ROB/V2/p107-136Ch05.html
+++ b/Baha'i/Others/ROB/V2/p107-136Ch05.html
@@ -244,7 +244,7 @@
        <td VALIGN=top><small><center><a name="p120">120</a></center><p>
 	   * See <a href="p222-235Ch10.html">chapter 10</a>.<p>
 	   <hr>
-	   10. Bahá'u'lláh, 'Tablet of Ahmad', included in most Bahá'í prayer books.<p>
+	   10. Bahá'u'lláh, <a href="../../../Comp/BP/p207-268Occasional.html#para10">'Tablet of Ahmad'</a>, included in most Bahá'í prayer books.<p>
 	   11. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#para193">lii</a>.
 	   </small></td>
 </tr>
@@ -285,7 +285,7 @@
 	   * Muhammad.<p>
 	   <hr>
 	   12. <i>Qur'án</i>, ii. 23; quoted in the <i>Kitáb-i-Íqán</i>, p. 131 (Brit.), <a href="../../../Baha/KI/p095-258.html#para124">p. 204</a> (U.S.).<p>
-	   13. Bahá'u'lláh, 'Tablet of Ahmad', included in most Bahá'í prayer books.
+	   13. Bahá'u'lláh, <a href="../../../Comp/BP/p207-268Occasional.html#para10">'Tablet of Ahmad'</a>, included in most Bahá'í prayer books.
 	   </small></td>
 </tr>
 <tr>
@@ -328,7 +328,7 @@
 	   * Bahá'u'lláh<p>
 	   † See vol. 1, p. <a href="../V1/p053-070Ch05.html#p65">65</a>.<p>
 	   <hr>
-	   15. Bahá'u'lláh, 'Tablet of Ahmad', included in most Bahá'í prayer books.
+	   15. Bahá'u'lláh, <a href="../../../Comp/BP/p207-268Occasional.html#para17">'Tablet of Ahmad'</a>, included in most Bahá'í prayer books.
 	   </small></td>
 </tr>
 <tr>
@@ -359,7 +359,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p128">128</a></center><p>
 	   <hr>
-	   19. Bahá'u'lláh, 'Tablet of Ahmad', included in most Bahá'í prayer books.
+	   19. Bahá'u'lláh, <a href="../../../Comp/BP/p207-268Occasional.html#para12">'Tablet of Ahmad'</a>, included in most Bahá'í prayer books.
+   	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#TablettoHájí'Abdu'l-Majíd(Abá Badí')">Abá Badí'</a>]
 	   </small></td>
 </tr>
 <tr>
@@ -387,9 +389,6 @@
        <td VALIGN=top><small><center><a name="p130">130</a></center><p>
 	   * These Tablets will be discussed in vol. III [<a href="../V3/p467-483Index.html#Lawh-i-Ra'ís">Ra'ís</a>, <a href="../V3/p467-483Index.html#Lawh-i-Fu'ád">Fu'ád</a>].<p>
 	   † See <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/Introduction.html#para21">Introduction</a>.<p>
-	   <hr>
-	   <hr>
-	   [Abá Badí'] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p103-140QA.html#qa104">Q&A 104</a>
 	   </small></td>
 </tr>
 <tr>
@@ -461,7 +460,12 @@
 	   immovable as a mountain in the Cause of his Lord, and with his own life-blood testified to its truth. He amply demonstrated the power of Bahá'u'lláh Who, through a single word, had created a new race of men, and instilled into them such faith that they became the embodiments of these words: 'And be thou so steadfast in My love that thy heart shall not waver, even if the swords of the enemies rain blows upon thee and all the heavens and the earth arise against thee.'
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p136">136</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p136">136</a></center><p>
+	   <hr>
+	   <hr>
+	   <a href="../../../Comp/BP/p207-268Occasional.html#para12">'Tablet of Ahmad'</a>
+   
+	   </small></td>
 </tr>
 </table>
 
