--- a/Baha'i/Others/ROB/V2/p270-282Ch12.html
+++ b/Baha'i/Others/ROB/V2/p270-282Ch12.html
@@ -152,7 +152,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p275">275</a></center><p>
-	   *This Tablet is also known by its opening verse as <i>Qad-Ihtaraqa'l-Mukhlisún</i>. It has become known among the English-speaking believers as the <i>Fire Tablet</i>. We shall refer to it in the <a href="../V3/p467-483Index.html#Lawh-i-QadIhtaraqa'l-Mukhlisún">next volume</a>.<p>
+	   *This Tablet is also known by its opening verse as <i>Qad-Ihtaraqa'l-Mukhlisún</i>. It has become known among the English-speaking believers as the <a href="../../../Comp/BP/p207-268Occasional.html#para21"><i>Fire Tablet</i></a>. We shall refer to it in the <a href="../V3/p467-483Index.html#Lawh-i-QadIhtaraqa'l-Mukhlisún">next volume</a>.<p>
 	   <hr>
 	   5. Hájí Muhammad-Táhir-i-Málmírí, unpublished 'History of the Faith in the Province of Yazd'.
 	   </small></td>
