--- a/Baha'i/Others/ROB/V3/p221-252Ch11.html
+++ b/Baha'i/Others/ROB/V3/p221-252Ch11.html
@@ -105,7 +105,7 @@
 	   * see vol. 2, pp. <a href="../V2/p107-136Ch05.html#p118">118</a>-19, <a href="../V2/p270-282Ch12.html#p272">272</a>-4, <a href="../V2/p283-290Ch13.html#p290">290</a>.<p>
 	   † vol. 2, pp. <a href="../V2/p270-282Ch12.html#p274">274</a>-5.<p>
 	   <hr>
-	   1. <i>Qad Ihtaraqa'l-Mukhlisún</i> (The Fire Tablet).
+	   1. <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-QadIhtaraqa'l-Mukhlisún"><i>Qad Ihtaraqa'l-Mukhlisún</i></a> (The Fire Tablet).
 	   </small></td>
 </tr>
 <tr>
@@ -171,7 +171,7 @@
        <td VALIGN=top><small><center><a name="p230">230</a></center><p>
 	   * see vol. 2, pp. <a href="../V2/p065-106Ch04.html#p94">94</a>-6.<p>
 	   <hr>
-	   3. Quoted in <i>Ishráqát</i>, a compilation, p. 15.
+	   3. Quoted in <i>Ishráqát</i> (A compilation of the Tablets of Bahá'u'lláh), p. 15.
 	   </small></td>
 </tr>
 <tr>
