--- a/Baha'i/Others/ROB/V3/p253-274Ch12.html
+++ b/Baha'i/Others/ROB/V3/p253-274Ch12.html
@@ -102,6 +102,9 @@ changed Mullá Sádiq-Khurásání to Mullá Sádiq-i-Khurásání to match The 
 	   † He was 'Alí-Muhammad, known as Ibn-i-Asdaq, later appointed by Bahá'u'lláh as a Hand of the Cause of God.<p>
 	   ‡ see pp. <a href="p087-107Ch05.html#p88">88</a>-91.<p>
 	   § see vol. 2, pp. <a href="../V2/p236-269Ch11.html#p245">245</a>-7.
+	   <hr>
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Ahmad"><i>Tablet of Ahmad</i></a>]
 	   </small></td>
 </tr>
 <tr>
