--- a/Baha'i/Others/ROB/V3/p400-421Ch18.html
+++ b/Baha'i/Others/ROB/V3/p400-421Ch18.html
@@ -189,7 +189,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p407">407</a></center><p>
-       * 'Tablet of Visitation' of 'Abdu'l-Bahá, in most Bahá'í prayer books. (A.T.)<p>
+       * <a href="../../../Comp/BP/p207-268Occasional.html#para200">'Tablet of Visitation'</a> of 'Abdu'l-Bahá, in most Bahá'í prayer books. (A.T.)<p>
        † See p. <a href="p174-203Ch09.html#p180">180n</a>. (A.T.)<p>
        ‡ Bahá'u'lláh often designated the male believers as 'servants of God' and the female as 'handmaidens of God'. (A.T.)
        </small></td>
