--- a/Baha'i/Others/ROB/V3/p174-203Ch09.html
+++ b/Baha'i/Others/ROB/V3/p174-203Ch09.html
@@ -437,7 +437,7 @@
        <td VALIGN=top><small><center><a name="p201">201</a></center><p>
 	   <hr>
 	   17. <i>Má'idiy-i-Ásamání</i>, vol. 4, p. 34.<p>
-	   18. <i>Ishráqát</i>, a compilation, p. 247.
+	   18. <i>Ishráqát</i> (A compilation of the Tablets of Bahá'u'lláh), p. 247.
 	   </small></td>
 </tr>
 <tr>
