--- a/Baha'i/Others/ROB/V4/p190-204Ch13.html
+++ b/Baha'i/Others/ROB/V4/p190-204Ch13.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p177-189Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p205-213Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 	   <b><i>Lawh-i-Ittihád</i></b><p>
 	   There is a Tablet known as the <i>Lawh-i-Ittihád</i> (Tablet of Unity) revealed by Bahá'u'lláh in 'Akká. In it He describes different features of unity. This Tablet was addressed to Siyyid Asadu'lláh, a believer from the city of Rasht, in answer to his question about the meaning of unity. He was one of the five brothers entitled by Bahá'u'lláh as Sádát-i-Khamsih (The Five Siyyids*). All five were believers. At one time Siyyid Asadu'lláh lived in Qazvín, a city where Mírzá Yahyá's followers were actively engaged in misrepresenting the Cause of Bahá'u'lláh. These people succeeded in poisoning the mind of Siyyid Asadu'lláh to a point where he became confused in his faith. However, this situation did not last very long. The purity of his heart coupled with the devoted efforts of the renowned Shaykh Kázim-i-Samandar who clarified all the misrepresentations of the Azalís, enabled Siyyid Asadu'lláh to regain his faith and become a steadfast believer. He then went on pilgrimage to 'Akká and attained the presence of Bahá'u'lláh. He saw with his own eyes the Glory of God and was made the recipient of His grace and bounties. His youngest brother, Siyyid Nasru'lláh, also had the great privilege of attaining the presence of Bahá'u'lláh in 'Akká. Both brothers, survivors of the five, were great servants of the Cause till the end of their lives.<p>
 	   In the Tablet of Ittihád, Bahá'u'lláh describes in some detail several features of unity. He states that unity in the first place is the unity of religion, meaning that people must follow the same religion which is His Faith in this day. He declares that when the majority of the people in a country embrace His Cause, then the government will be able to put into practice His teachings and commandments. He asserts that in past dispensations such a unity has always brought victory to the Cause of God.<p>
-	   Bahá'u'lláh explains that unity on another level is in the realm of speech. He gives the example of two believers who might contradict each other on a subject. In such a case they would become the cause of depriving themselves, and others who hear
+	   Bahá'u'lláh explains that unity on another level is in the realm of speech. He gives the example of two believers who might contradict each other on a subject. In such a case they would become the cause of depriving themselves, and others who hear 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p191">191</a></center><p>
@@ -74,7 +74,7 @@
 <tr>
        <td>
 	   occupying the same position and having equal rank. He prophesies that if this happens, the world of humanity will become a paradise. Throwing further light on this subject, Bahá'u'lláh declares that although man is a glorious being endowed with divine attributes, it is a grave transgression to consider oneself superior to others.<p>
-	   This teaching of Bahá'u'lláh, if implemented, will create in the heart the feeling of humility and self-effacement. If not, pride and vainglory will tend to dominate and man will become a prisoner of his own self and passion. His Saviour in this case is none other than the Manifestation of God.<p>
+	   This teaching of Bahá'u'lláh, if implemented, will create in the heart the feeling of humility and self-effacement. If not, pride and vainglory will tend to dominate and man will become a prisoner of his own self and passion. His Saviour in this case is none other than the Manifestation of God.<p> 
 	   By recognizing Bahá'u'lláh as the Revealer of the Word of God for today and wholeheartedly following His exhortations and counsels, the soul becomes freed from the fetters of self and material attachments. It is then that the individual can understand the purpose of life. And it is then that he can become truly united with his fellow believers.<p>
 	   One of the great bounties of the Revelation of Bahá'u'lláh is that He has abolished the institution of priesthood. Although greatly abused, and now almost ineffective, this institution was perhaps necessary and useful in past ages when the great majority of people were illiterate and had to be shepherded by leaders. But today it is totally unnecessary. In the Tablet of Ittihád Bahá'u'lláh states that if the religious leaders and divines of Persia had not regarded themselves as superior beings, their followers would not have engaged in bitter opposition to His Cause. He describes their pride and vainglory as a fire which has engulfed and consumed the whole nation.<p>
 	   Not only has the Cause of Bahá'u'lláh rid itself of the institution of priesthood, which breeds disunity and corruption, but intrinsically it does not harbour egotistical personalities within its divinely ordained institutions. Its hallmark is servitude to God which, in practice, is servitude to man. Those who serve on Bahá'í institutions can experience unity in action because there is no scope for anyone to promote personal ambitions or demonstrate superior talents within these institu-
@@ -96,14 +96,14 @@
 	   passages in the Writings of Bahá'u'lláh concerning the power of unity and the destructive effects of disunity. In one of His Tablets<small><sup>3</sup></small> Bahá'u'lláh states that if the loved ones of God were able to achieve unity in every region, the whole world would be illumined with its light. He grieves over the existence of disunity among the believers in some areas, and declares that this has brought abasement and disgrace upon the Faith. In this Tablet He further explains that if all the peoples of the world were to rise up against the Cause no harm would come to it, rather their opposition would become the cause of its exaltation, but disunity among His loved ones will damage the good name of the Cause, hinder its progress, and inflict untold sufferings and pain upon its Author.<p>
 	   In another Tablet<small><sup>4</sup></small> Bahá'u'lláh exhorts His followers to shun any word which might become the cause of disunity, even if such a word is uttered by those who are closest to Him and continually circle the throne of His sovereignty. He describes disunity, in yet another Tablet,<small><sup>5</sup></small> as a burning fire which ought to be quenched with the waters of wisdom and utterance. In one of His Tablets<small><sup>6</sup></small> 'Abdu'l-Bahá states that anyone who becomes the cause of disunity in the Cause will not see happiness in his life.<p>
 	   Concerning the unity of earthly possessions, Bahá'u'lláh in the <i>Lawh-i-Ittihád</i> states that there are two stages of unity. One is that of generosity, when the individual does not deprive his fellow human beings of the things God has given him, and bestows some of his earthly riches upon them. This praiseworthy deed Bahá'u'lláh describes as the state of <i>musávát</i> (equality). It is a state in which a person generously gives to others as to himself. The other stage is that of <i>muvását</i>, which means that the individual sacrifices his own needs for the sake of others and gives preference to them. Bahá'u'lláh regards this attitude as the highest and noblest quality in man. But he emphasizes that this preference is meant to be exercised only in the realm of earthly possessions and does not apply to anything else.<p>
-	   In the Tablet known as <i>Kalimát-i-Firdawsíyyih</i>,* Bahá'u'lláh
+	   In the Tablet known as <i>Kalimát-i-Firdawsíyyih</i>,* Bahá'u'lláh 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p195">195</a></center><p>
 	   * see below, <a href="p214-226Ch15.html">ch. 15</a>.
 	   <hr>
 	   3. <i>Áthár-i-Qalam-i-A'lá</i>, vol. 8, p. 57.<p>
-	   4. <i>Ishráqát</i>, p. 230.<p>
+	   4. <i>Ishráqát</i> (A compilation of the Tablets of Bahá'u'lláh), p. 230.<p>
 	   5. Unpublished compilation, National Archives Committee, no. 18, p. 382.<p>
 	   6. <i>Má'idiy-i-Ásamání</i>, vol. 9, p. 129.
 	   </small></td>
@@ -124,7 +124,7 @@
 	   8. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para590">CXXXII</a>.<p>
 	   9. Lawh-i-Maqsúd, <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para469">p. 164</a>.
 	   <hr>
-	   ["O well-beloved ones!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CXII">CXII</a>
+	   ["O well-beloved ones!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CXII">CXII</a> 
 	   </small></td>
 </tr>
 <tr>
@@ -144,7 +144,7 @@
        <td>
 	   <blockquote>amongst you. Cleave unto that which draweth you together and uniteth you. This, verily, is the most exalted Word which the Mother Book hath sent down and revealed unto you. To this beareth witness the Tongue of Grandeur from His habitation of glory.<small><sup>11</sup></small></blockquote>
 	   Recognition of the oneness of mankind is the most essential prerequisite for world peace. However, the establishment of unity on any level will in its turn create a form of peace on that same level. For example, the establishment of political unity among all the nations of the world will bring about a political peace on a world scale, which is referred to in the Writings of Bahá'u'lláh as the 'Lesser Peace'.* In the distant future, when the generality of mankind will have recognized the station of Bahá'u'lláh as the Mouthpiece of God on this earth and the redeemer of all humanity, when the outpouring of His Revelation will have penetrated into the hearts of men, creating thereby a bond of spiritual unity among the peoples and kindreds of the earth, then the human race will witness the establishment of the 'Most Great Peace' promised by Bahá'u'lláh as one of the noblest fruits of His Revelation.<p>
-	   Unity of the human race should not be confused with uniformity, which is against the fundamental laws of creation. The teachings of Bahá'u'lláh emphasize the principle of unity in diversity. In God's creation there is only one of everything. No two things are the same. The best way to appreciate the reason for this uniqueness is to study the Bahá'í Writings and also observe nature. We understand from the Writings of Bahá'u'lláh and 'Abdu'l-Bahá that every created thing, be it from the mineral, vegetable or animal kingdom, manifests some of the attributes of God. The differences between these kingdoms are due to the varying degrees of the manifestation of these attributes. For instance, there are fewer attributes of God manifested in the mineral kingdom than there are in the vegetable. The same is true of the vegetable in relation to the animal. Many attributes
+	   Unity of the human race should not be confused with uniformity, which is against the fundamental laws of creation. The teachings of Bahá'u'lláh emphasize the principle of unity in diversity. In God's creation there is only one of everything. No two things are the same. The best way to appreciate the reason for this uniqueness is to study the Bahá'í Writings and also observe nature. We understand from the Writings of Bahá'u'lláh and 'Abdu'l-Bahá that every created thing, be it from the mineral, vegetable or animal kingdom, manifests some of the attributes of God. The differences between these kingdoms are due to the varying degrees of the manifestation of these attributes. For instance, there are fewer attributes of God manifested in the mineral kingdom than there are in the vegetable. The same is true of the vegetable in relation to the animal. Many attributes 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p198">198</a></center><p>
@@ -226,7 +226,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p203">203</a></center><p>
 	   <hr>
-	   17. <i>Women</i> (comp.), pp. 2-3.<p>
+	   17. <i>Women</i> (comp.), pp. 2-3.<p> 
 	   18. <i>Selections</i>, p. 302.
 	   </small></td>
 </tr>
@@ -249,7 +249,7 @@
        <td>
 	   	   <FORM ACTION="p177-189Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -257,12 +257,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p205-213Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
