--- a/Baha'i/Others/ROB/V4/p315-328Ch21.html
+++ b/Baha'i/Others/ROB/V4/p315-328Ch21.html
@@ -54,7 +54,7 @@
        <td VALIGN=top><small><center><a name="p316">316</a></center><p>
 	   * Literally, the Dawning-Place of the mention of God, Bahá'í House of Worship. Bahá'u'lláh has ordained that the believers attend the Mashriqu'l-Adhkár before dawn for prayers. Although the friends did not have a House of Worship, they used to assemble at someone's house.<p>
 	   <hr>
-	   1. Unpublished compilation, National Archives Committee, no. 27, p. 354. Shoghi Effendi's English translation is well-known to Bahá'ís and appears on the title-page of <i>Bahá'í Prayers</i> (Wilmette, Illinois: Bahá'í publishing Trust, 1982).<p>
+	   1. Unpublished compilation, National Archives Committee, no. 27, p. 354. Shoghi Effendi's English translation is well-known to Bahá'ís and appears on the title-page of <i><a href="../../../Comp/BP/Prologue.html">Bahá'í Prayers</a></i> (Wilmette, Illinois: Bahá'í publishing Trust, 1982).<p>
 	   2. <i>Bahá'í Meetings</i>, p. 21.<p>
 	   <hr>
 	   Audio: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Blessed is the Spot</a> (in Arabic). <small>See <a href="../../../../download.html">Download Center</a>.</small>
