--- a/Baha'i/Others/ROB/V4/p118-144Ch08.html
+++ b/Baha'i/Others/ROB/V4/p118-144Ch08.html
@@ -378,7 +378,7 @@
 <tr>
        <td>
 	   demonstrated by thousands of its martyrs, its saints and scholars, its teachers and administrators, is indicative of an unshakeable faith and certitude unprecedented in the annals of religion. If it were not for the steadfastness of the followers of the Báb and Bahá'u'lláh in the face of brutal attacks and persecutions, the Bahá'í community could not have won such remarkable victories within so short a period of time.<p>
-	   The steadfastness of a believer depends upon the extent to which he has recognized the station of Bahá'u'lláh. Those who have truly reached the pinnacle of faith and certitude have become so steadfast in the Cause of God as to fulfil the conditions for steadfastness that Bahá'u'lláh has laid down in the Tablet of Ahmad:*<p>
+	   The steadfastness of a believer depends upon the extent to which he has recognized the station of Bahá'u'lláh. Those who have truly reached the pinnacle of faith and certitude have become so steadfast in the Cause of God as to fulfil the conditions for steadfastness that Bahá'u'lláh has laid down in the <i>Tablet of Ahmad</i>:*<p>
 	   <blockquote>And be thou so steadfast in My love that thy heart shall not waver, even if the swords of the enemies rain blows upon thee and all the heavens and the earth arise against thee.</blockquote>
 	   It is interesting to note that in the same Tablet Bahá'u'lláh has made the following promise:<p>
 	   <blockquote>By God! Should one who is in affliction or grief read this Tablet with absolute sincerity, God will dispel his sadness, solve his difficulties and remove his afflictions.</blockquote>
@@ -389,7 +389,10 @@
        <td VALIGN=top><small><center><a name="p141">141</a></center><p>
 	   * For further information see vol. 2, <a href="../V2/p107-136Ch05.html">ch. 5</a>.<p>
 	   <hr>
-	   30. <i>Ishráqát</i>, p. 196.
+	   30. <i>Ishráqát</i> (A compilation of the Tablets of Bahá'u'lláh), p. 196.
+	   <hr>
+	   <br>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#Lawh-i-Ahmad"><i>Tablet of Ahmad</i></a>]
 	   </small></td>
 </tr>
 <tr>
