--- a/Baha'i/SE/GPB/p321-401FourthPeriod.html
+++ b/Baha'i/SE/GPB/p321-401FourthPeriod.html
@@ -350,7 +350,8 @@
 	Still other factors promoting the development of that Order and contributing to its consolidation have been the systematic institution of the Nineteen Day Feast, functioning in most Bahá'í communities in East and West, with its threefold emphasis on the devotional, the administrative and the social aspects of Bahá'í community life; the initiation of activities designed to prepare a census of Bahá'í children, and provide for them laboratory courses, prayer books and elementary literature, and the formulation and publication of a body of authoritative statements on the non-political character of the Faith, on membership in non-Bahá'í religious organizations, on methods of teaching, on the Bahá'í attitude towards war, on the institutions of the Annual Convention, of the Bahá'í Spiritual Assembly, of the Nineteen Day Feast and of the National Fund. Reference should, moreover, be made to the establishment of National Archives for the authentication, the collection, the translation, the cataloguing and the preservation of the Tablets of Bahá'u'lláh and of 'Abdu'l-Bahá and for the preservation of sacred relics and historical documents; to the verification and transcription of the original Tablets of the Báb, of Bahá'u'lláh and of 'Abdu'l-Bahá in the possession of Oriental believers; to the compilation of a detailed history of the Faith since its inception until the present day; to the opening of a Bahá'í International Bureau in Geneva; to the holding of Bahá'í district conventions; to the purchase of historic sites; to the establishment of Bahá'í memorial libraries, and to the initiation of a flourishing children's Savings Bank in Persia.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<a href="../../Comp/BP/Cover.html"><i>Bahá'í Prayers</i></a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
